--- a/matrix-app/package.json
+++ b/matrix-app/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.0.2",
     "frame": "^1.0.0-alpha.2",
     "lucide-react": "^0.456.0",
     "monaco-editor": "^0.52.0",
