--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,21 +17,26 @@
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "@prisma/client": "^6.0.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
-    "axios": "^1.7.7",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookies-next": "^5.0.2",
     "frame": "^1.0.0-alpha.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
     "monaco-editor": "^0.52.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
+    "pg": "^8.13.1",
+    "prisma": "^6.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hot-toast": "^2.4.1",
