--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
     "monaco-editor": "^0.52.0",
+    "mongodb": "^6.11.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "pg": "^8.13.1",
