--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,14 +26,18 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookies-next": "^5.0.2",
+    "dotenv": "^16.4.7",
     "frame": "^1.0.0-alpha.2",
+    "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
     "monaco-editor": "^0.52.0",
     "mongodb": "^6.11.0",
+    "mongoose": "^8.8.4",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "pg": "^8.13.1",
