--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "sooner": "^1.1.4",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
     "vaul": "^1.1.1"
   },
   "devDependencies": {
