--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,7 +52,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
-    "vaul": "^1.1.1"
+    "vaul": "^1.1.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
